--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.jpa.database=POSTGRESQL
 # jdbc:postgresql://localhost:5432/<データベース名>
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_sample
+spring.datasource.url=jdbc:postgresql://localhost:5432/MODEL_LESSON
 # ユーザー名：postgres（固定）
 spring.datasource.username=postgres
 # パスワード：Macログイン時のパスワード
