--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # 接続先のDB名（固定）
 spring.jpa.database=POSTGRESQL
 # jdbc:postgresql://localhost:5432/<データベース名>
+# jdbc:postgresql://localhost:5432/データベース名
 spring.datasource.url=jdbc:postgresql://localhost:5432/MODEL_LESSON
 # ユーザー名：postgres（固定）
 spring.datasource.username=postgres
